# cardiotrust

./: .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  build_rs_cov.profraw  config.toml  justfile  paper.md  readme.md
.cargo/: .config.toml
.config/: nextest.toml
.docker/: Dockerfile  entrypoint.sh
.opencode/skills/sandbox-build-fix/: SKILL.md
assets/: RoundArrow.glb  RoundArrow.mtl  bed.glb  control_function_ohara.npy  room.glb  sensor_array.glb  torso.glb
benches/: gpu_benches.rs  gpu_derivation_benches.rs  gpu_epoch_benches.rs  gpu_prediction_benches.rs  gpu_update_benches.rs  in_derivation_benches.rs  in_epoch_benches.rs  in_kalman_benches.rs  in_metrcis_benches.rs  in_metrics_benches.rs  in_system_prediction_benches.rs  in_update_benches.rs  my_benchmark.rs  old.rs  run_epoch_benches.rs
docs/: architecture.md  error-handling-patterns.md
docs/projects/: projects.md
docs/projects/archive/code-cleanup/: plan.md
docs/projects/archive/error-handling/: plan.md
docs/projects/archive/repository-professionalization/: plan.md
docs/projects/code-cleanup/: plan.md
docs/projects/error-handling/: plan.md
docs/projects/repository-professionalization/: plan.md
docs/projects/template/: README.md  plan-template.md  spec-template.md
docs/ui-design/: explorer-view.md  home-view.md  navigation.md  overview.md  results-view.md  scenario-view.md  scheduler-view.md  volumetric-view.md
openspec/: config.yaml
openspec/changes/archive/2026-03-12-ui-color-theme-and-ui-type-resource/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-initial-specs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-initial-specs/specs/cardiac-model/: spec.md
openspec/changes/archive/2026-03-13-initial-specs/specs/data-simulation/: spec.md
openspec/changes/archive/2026-03-13-initial-specs/specs/scenario-lifecycle/: spec.md
openspec/changes/archive/2026-03-15-ui-home-view-and-project-loading/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-bevy-ui-explorer-view/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-28-scenario-explorer-sorting/: design.md  tasks.md
openspec/changes/explorer-scenario-search/: design.md  proposal.md  tasks.md
openspec/changes/explorer-scenario-search/specs/ui-explorer-view/: spec.md
openspec/changes/scenario-explorer-sorting/: proposal.md
openspec/changes/ui-color-theme-and-ui-type-resource/: tasks.md
openspec/changes/ui-color-theme-and-ui-type-resource/specs/ui-navigation/: spec.md
openspec/changes/ui-color-theme-and-ui-type-resource/specs/ui-type-resource/: spec.md
openspec/changes/ui-home-view-and-project-loading/: design.md  tasks.md
openspec/changes/ui-home-view-and-project-loading/specs/ui-home-view/: spec.md
openspec/changes/ui-home-view-and-project-loading/specs/ui-project-state/: spec.md
openspec/changes/ui-navigation-shell/: design.md  proposal.md  tasks.md
openspec/changes/ui-navigation-shell/specs/bevy-content-area/: spec.md
openspec/changes/ui-navigation-shell/specs/ui-navigation/: spec.md
openspec/specs/bevy-content-area/: spec.md
openspec/specs/bevy-sidebar-rail/: spec.md
openspec/specs/bevy-view-routing/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/explorer-scenario-search/: spec.md
openspec/specs/inverse-algorithm/: spec.md
openspec/specs/scenario-sort/: spec.md
openspec/specs/ui-color-theme/: spec.md
openspec/specs/ui-explorer-view/: spec.md
openspec/specs/ui-home-view/: spec.md
openspec/specs/ui-navigation/: spec.md
openspec/specs/ui-project-state/: spec.md
openspec/specs/visualization/: spec.md
src/: core.rs  lib.rs  scheduler.rs  tests.rs  ui.rs  vis.rs  websocket.rs
src/core/: algorithm.rs  config.rs  data.rs  model.rs  results.rs  scenario.rs
src/core/algorithm/: estimation.rs  gpu.rs  metrics.rs  refinement.rs  tests.rs
src/core/algorithm/estimation/: prediction.rs  shapes.rs
src/core/algorithm/gpu/: derivation.rs  epoch.rs  helper.rs  metrics.rs  prediction.rs  reset.rs  update.rs
src/core/algorithm/gpu/kernels/: add_control.cl  atomic.cl  calculate_derivatives_coefs.cl  calculate_derivatives_gains.cl  calculate_residuals.cl  helper.cl  innovate.cl  mapped_residual.cl  maximum_regularization.cl  metrics.cl  predict_measurements.cl  predict_measurements_local.cl  reset.cl  update_coefs.cl  update_gains.cl
src/core/algorithm/refinement/: derivation.rs  update.rs
src/core/algorithm/tests/: loss_decreases.rs  no_crash.rs
src/core/config/: algorithm.rs  model.rs  simulation.rs
src/core/data/: measurement.rs  shapes.rs  simulation.rs
src/core/data/simulation/: tests.rs
src/core/model/: functional.rs  shapes.rs  spatial.rs  tests.rs
src/core/model/functional/: allpass.rs  control.rs  kalman.rs  measurement.rs
src/core/model/functional/allpass/: delay.rs  direction.rs  flat.rs  gain.rs  normal.rs  shapes.rs
src/core/model/spatial/: heart.rs  nifti.rs  sensors.rs  voxels.rs
src/core/scenario/: results.rs  summary.rs  tests.rs
src/core/scenario/tests/: basic.rs  line_ap.rs  losslandscape.rs  runtime.rs  sensor_number.rs  sheet_ap.rs  single_ap.rs  single_ap_losslandscape.rs  smoothness_regularization.rs
src/ui/: colors.rs  explorer.rs  results.rs  scenario.rs  topbar.rs  vol.rs
src/ui/bevy_shell/: breadcrumb.rs  content_area.rs  home.rs  mod.rs  project.rs  routing.rs  sidebar.rs
src/ui/bevy_shell/explorer/: card.rs  context_menu.rs  empty_state.rs  mod.rs  thumbnail.rs  toolbar.rs
src/ui/scenario/: algorithm.rs  common.rs  data.rs
src/vis/: body.rs  cutting_plane.rs  heart.rs  options.rs  plotting.rs  room.rs  sample_tracker.rs  sensors.rs  torso.rs
src/vis/plotting/: activation_time.rs  engiffen.rs  gif.rs  line.rs  matrix.rs  matrix_old.rs  png.rs  states.rs  time.rs  voxel_type.rs  xy.rs  y.rs
src/vis/plotting/gif/: matrix.rs  states.rs  voxel_type.rs
src/vis/plotting/png/: activation_time.rs  delay.rs  line.rs  matrix.rs  propagation_speed.rs  states.rs  voxel_type.rs
wasm-client/: index.html
(+11 files in other folders)
