[package]
name = "cardiotrust"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bevy = {version = "0.14.2", features = ["bevy_gltf"]}
bevy_egui = {version = "0.30.1", default-features = false, features = ["open_url", "default_fonts", "render"]}
bevy_mod_picking = "0.20.1"
bevy_editor_cam = "0.4.0"
bevy_embedded_assets = "0.11.0"
bevy_obj = "0.14.0"
bincode = "1.3.3"
chrono = {version = "0.4.38", features = ["serde"]}
egui = "0.29.1"
egui_extras = {version="0.29.1", features = ["all_loaders"]}
egui_plot = "0.29.0"
gif = "0.13.1"
image = {version = "0.25.5", features = ["png"]}
itertools = "0.13.0"
nalgebra = {version = "0.33.2", features = ["serde-serialize"]}
ndarray = {version = "0.15.6", features = ["approx", "serde"]}
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
nifti = "0.16.0"
ocl = "0.19.7"
ocl-core = "0.11.5"
physical_constants = "0.5.0"
plotters = "0.3.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rubato = "0.16.1"
serde = "1.0.215"
scarlet = "1.2.0"
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"
tracing = {version = "0.1.40", features = ["max_level_trace", "release_max_level_info"]}
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
test-log = "0.2.16"
wasm-bindgen = "0.2.89"
js-sys = "0.3"
serde_json = "1.0.133"
[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
criterion = "0.5.1"
ntest = "0.9.3"

[[bench]]
name = "run_epoch_benches"
harness = false

[[bench]]
name = "in_epoch_benches"
harness = false

[[bench]]
name = "in_system_prediction_benches"
harness = false

[[bench]]
name = "in_kalman_benches"
harness = false

[[bench]]
name = "in_update_benches"
harness = false

[[bench]]
name = "in_derivation_benches"
harness = false

[[bench]]
name = "in_metrics_benches"
harness = false

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
#codegen-units = 1