[package]
name = "cardiotrust"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A research tool for cardiac electrophysiological simulation and non-invasive localization of arrhythmogenic tissue using state-space modeling and magnetic field measurements"
authors = ["Erik Engelhardt"]
repository = "https://github.com/DenominatorIsZero/cardiotrust"
homepage = "https://github.com/DenominatorIsZero/cardiotrust"
readme = "README.md"
keywords = ["cardiac", "electrophysiology", "simulation", "magnetic", "biomedical"]
categories = ["science", "simulation", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
approx = "0.5.1"
bevy = {version = "0.16.1", features = ["bevy_gltf"]}
bevy_egui = {version = "0.36.0", default-features = false, features = ["open_url", "default_fonts", "render"]}
bevy_editor_cam = "0.6.0"
bevy_obj = "0.16.1"
bincode = {version = "2.0.1", features = ["serde"]}
chrono = {version = "0.4.42", features = ["serde"]}
egui = "0.32.3"
egui_extras = {version="0.32.3", features = ["all_loaders"]}
egui_plot = "0.33.0"
gif = "0.13.3"
image = {version = "0.25.8", features = ["png"]}
itertools = "0.14.0"
nalgebra = {version = "0.34.0", features = ["serde-serialize"]}
ndarray = {version = "0.16.1", features = ["approx", "serde"]}
ndarray-npy = "0.9.1"
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
nifti = "0.17.0"
ocl = "0.19.7"
physical_constants = "0.5.0"
plotters = "0.3.7"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
rubato = "0.16.2"
serde = "1.0.221"
scarlet = "1.2.0"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "0.9.5"
tracing = {version = "0.1.40", features = ["max_level_info", "release_max_level_info"]}
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
test-log = "0.2.18"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "run_epoch_benches"
harness = false

[[bench]]
name = "in_epoch_benches"
harness = false

[[bench]]
name = "in_system_prediction_benches"
harness = false


[[bench]]
name = "in_derivation_benches"
harness = false

[[bench]]
name = "in_metrics_benches"
harness = false

[[bench]]
name = "gpu_prediction_benches"
harness = false

[[bench]]
name = "gpu_derivation_benches"
harness = false

[[bench]]
name = "gpu_update_benches"
harness = false

[[bench]]
name = "gpu_epoch_benches"
harness = false

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
#codegen-units = 1